--- a/OneDrive/Desktop/awesome-blog/index.html
+++ b/OneDrive/Desktop/awesome-blog/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- Use relative favicon path so it works under /blog-app1/ base on GitHub Pages -->
+  <link rel="icon" type="image/svg+xml" href="vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Awesome Blog</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -24,10 +25,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="./index.tsx"></script>
 </body>
 </html>
